--- a/docs/latex/develop.tex
+++ b/docs/latex/develop.tex
@@ -763,8 +763,15 @@ It includes anything which does not fit into the other sections and comprises th
 
 % Core relax design figure.
 \begin{figure}
-\centerline{\includegraphics[width=\textwidth, bb=0 -1 389 476]{images/core_design}}
-\caption{The core design of relax.} \label{fig: core design}
+  \centerline{
+    \includegraphics[
+      width=\textwidth,
+      bb=0 -1 389 476
+    ]
+    {images/core_design}
+  }
+  \caption{The core design of relax.}
+  \label{fig: core design}
 \end{figure}
 
 
