--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -264,7 +264,13 @@
 {\LARGE \textbf{\input{relax_version}}}
 \vspace{\stretch{1}}
 
-\centerline{\includegraphics[width=\textwidth, bb=14 14 793 342]{images/ulysses}}
+\centerline{
+  \includegraphics[
+    width=\textwidth,
+    bb=14 14 793 342
+  ]
+  {images/ulysses}
+}
 \vspace{\stretch{2}}
 
 % Subtitle.
