--- a/docs/latex/consistency_tests.tex
+++ b/docs/latex/consistency_tests.tex
@@ -311,9 +311,21 @@ In the case where inconsistency arises, if data from more than two magnetic fiel
 \end{itemize}
 
 \begin{figure*}[h]
-\label{fig: consistency analysis}
-\centerline{\includegraphics[width=0.9\textwidth, bb=5 2 1244 669]{graphics/analyses/consistency_testing/consistency__J0_PSE-4}}
-\caption[Example of consistency testing visual analysis]{Example of consistency testing visual analysis.  Relaxation data from three different magnetic fields are compared.  For each pair of magnetic field, a correlation plot of the calculated $J(0)$ values (approach A, top) as well as an histogram of the ration of calculated $J(0)$ values (approach B, bottom) are shown.  These graphs must be manually created from the output of the sample script shown in section~\ref{sect: consistency tests - sample script}.  The PSE-4 data, as published in \citet{MorinGagne09b}, has been reused for the purpose of this example.}
+  \centerline{
+    \includegraphics[
+      width=0.9\textwidth,
+      bb=5 2 1244 669
+    ]
+    {graphics/analyses/consistency_testing/consistency__J0_PSE-4}
+  }
+  \caption[Example of consistency testing visual analysis]{
+    Example of consistency testing visual analysis.
+    Relaxation data from three different magnetic fields are compared.
+    For each pair of magnetic field, a correlation plot of the calculated $J(0)$ values (approach A, top) as well as an histogram of the ration of calculated $J(0)$ values (approach B, bottom) are shown.
+    These graphs must be manually created from the output of the sample script shown in section~\ref{sect: consistency tests - sample script}.
+    The PSE-4 data, as published in \citet{MorinGagne09b}, has been reused for the purpose of this example.
+  }
+  \label{fig: consistency analysis}
 \end{figure*}
 
 An example of such an analysis is shown in Figure~\ref{fig: consistency analysis}.
